# mayak-ui

./: CMakeLists.txt  LICENSE  README.md
include/: mayakui.hpp
include/core/: Init.hpp  Mainloop.hpp  Window.hpp
include/event/: Event.hpp  Input.hpp
include/gfx/: Renderer.hpp
include/ui/: Label.hpp  Layout.hpp  Widget.hpp
include/utils/: logger.hpp  vec2.hpp
src/core/: Init.cpp  Mainloop.cpp  Window.cpp
src/event/: Event.cpp  Input.cpp
src/gfx/: Renderer.cpp
tests/: CMakeLists.txt  main.cpp
